@@ -1,3 +1,0 @@
-# gem		base directory		versioning file			[executable files under bin]
-rdoc		lib/rdoc		lib/rdoc.rb			[rdoc ri]
-json		ext/json		ext/json/lib/json/version.rb
