@@ -1,3 +1,9 @@
+Sun Apr 12 18:12:07 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>
+
+	* ext/json/json.gemspec, lib/rdoc/rdoc.gemspec: added gemspec directly.
+	* defs/default_gems, tool/rbinstall.rb: removed default_gems definition.
+	  it make simple installation for default gems.
+
 Sun Apr 12 17:35:17 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>
 
 	* ext/json/*, test/json/*: Reverted r50231. Because it's not works with
